Fixes component gallery includes & column overflow issue for mobile devices

--- a/craft/templates/_complex-content/complex-content.scss
+++ b/craft/templates/_complex-content/complex-content.scss
@@ -15,11 +15,11 @@ complex-content{
             column-gap: 32px;
 
             &.-column-count-1{
-                grid-template-columns: 1fr;
+                grid-template-columns: minmax(320px, 1fr);
             }
 
             &.-column-count-2{
-                grid-template-columns: 1fr;
+                grid-template-columns: minmax(350px, 1fr);
 
                 @media (min-width: $screen-medium){
                     grid-template-columns: 1fr 1fr;
@@ -27,7 +27,7 @@ complex-content{
             }
 
             &.-column-count-3{
-                grid-template-columns: 1fr;
+                grid-template-columns: minmax(350px, 1fr);
 
                 @media (min-width: $screen-medium){
                     grid-template-columns: 1fr 1fr;
