--- a/craft/templates/component-gallery/component-gallery.scss
+++ b/craft/templates/component-gallery/component-gallery.scss
@@ -1,34 +1,32 @@
+@import 'settings';
+@import 'mixins';
+
 #component-gallery{
     display: flex;
     width: 1200px;
     max-width: 100vw;
     flex-flow: row nowrap;
     margin: 0 auto;
-    padding: 128px 0;
+    padding: 64px 0;
 
     section{
         width: 100%;
         padding: 16px;
-
-        &:first-child{
-            width: 45%;
-        }
-        
 
         h1{
             font-size: 3rem;
             text-transform: capitalize;
             display: block;
             opacity: 0.87;
-            font-weight: 500;
+            font-weight: $medium;
+            margin-bottom: $unit;
         }
 
         h2{
             font-size: 1.25rem;
-            font-weight: 400;
             display: block;
             opacity: 0.3;
-            margin-bottom: 16px;
+            margin-bottom: $unit;
         }
 
         p{
@@ -58,7 +56,36 @@
                 height: 100%;
                 justify-content: center;
                 align-items: center;
+                padding: 32px;
             }
         }
+    }
+}
+
+#return{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    line-height: 2rem;
+    transition: all 150ms ease;
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    color: rgba(41,41,41,0.6);
+
+    svg{
+        width: 18px;
+        height: 18px;
+        margin-right: 8px;
+    }
+
+    @include hover{
+        color: rgba(59, 131, 249, 0.87);
+    }
+}
+
+complex-content{
+    section{
+        background-color: #f7f7f7 !important;
     }
 }
